--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "oliwerix",
   "license": "ISC",
   "dependencies": {
+    "content-disposition": "^0.5.4",
+    "express": "^4.17.1",
     "ws": "^8.3.0"
   }
 }
